<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.albums.TrackToAlbumFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_track_to_album_title" />

    <TextView
        android:id="@+id/add_track_album_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_track_to_album_desc" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/song_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txt_song_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/song_duration">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txt_song_duration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_add_song_album"
        android:text="@string/save"
        />

</LinearLayout>