<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ui.albums.AddAlbumFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/album_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txt_add_album_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="#FFFFFF" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/cover">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txt_add_album_cover"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="#FFFFFF" />

    </com.google.android.material.textfield.TextInputLayout>


    <EditText
        android:id="@+id/txt_add_album_calendar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableEnd="@android:drawable/ic_menu_my_calendar"
        android:ems="10"
        android:hint="@string/dd_mm_yyyy"
        android:inputType="date" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txt_add_album_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="#FFFFFF" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/gender">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txt_add_album_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="#FFFFFF" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/record_label">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txt_add_album_record_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="#FFFFFF" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_add_song_album"
        android:layout_width="182dp"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:minHeight="52dp"
        android:text="@string/save" />


</LinearLayout>